4.Kubernetes/3.PrimeirosPassosNaPratica/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: node-server
  labels:
    name: node-server
spec:
  selector:
    matchLabels:
      app: "node-server"
  replicas: 3
  template:
    metadata:
      labels:
        app: node-server
    spec:
      containers:
        - name: node-server
          image: petrovick/hello-node:latest
