4.Kubernetes/3.PrimeirosPassosNaPratica/k8s/pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: node-server
  labels:
    name: node-server
spec:
  containers:
  - name: goserver
    image: petrovick/hello-node:latest
