4.Kubernetes/3.PrimeirosPassosNaPratica/k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mysql
spec:
  replicas: 2
  serviceName: mysql-h
  # podManagementPolicy: Parallel # Usado quando não quer garantir a ordem de criação
  selector:
    matchLabels: 
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
        - name: mysql
          image: mysql
          volumeMounts:
            - mountPath: /var/lib/mysql
              name: mysql-volume

  volumeClaimTemplates:
  - metadata:
      name: mysql-volume
    spec:
      accessModes: 
        - ReadWriteOnce
      resources:
        requests:
          storage: 5Gi
