4.Kubernetes/3.PrimeirosPassosNaPratica/k8s/service.loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server-service
spec:
  selector: # Filtra o pod que será associado à esse service
    app: node-server
  type: LoadBalancer # Opções:  ClusterIP NodePort, LoadBalancer, Headless Service
  ports:
  - name:  node-server-service
    port: 80
    targetPort: 8000
    protocol: TCP
