4.Kubernetes/3.PrimeirosPassosNaPratica/k8s/service.mysql.headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql-h # É o mesmo do serviceName do statefulset.yaml (kind: StatefulSet)
spec:
  selector: # Filtra o pod que será associado à esse service
    app: mysql
  ports:
    - port: 3306
  clusterIP: None
