4.Kubernetes/3.PrimeirosPassosNaPratica/k8s/service.nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: node-server-service
spec:
  selector: # Filtra o pod que será associado à esse service
    app: node-server
  type: NodePort # Opções:  ClusterIP NodePort, LoadBalancer, Headless Service
  ports:
  - name:  node-server-service
    port: 80
    targetPort: 8000
    protocol: TCP
    nodePort: 30001 # Limite que pode trabalhar aqui é >=30000 && <=32767, limite do k8s para as portas usando NodePort
