4.Kubernetes/3.PrimeirosPassosNaPratica/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-host
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
    ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  rules:
  - host: "ingress.petrovick.com.br"
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: node-server-service
            port: 
              number: 80
  tls:
  - hosts:
    - "ingress.petrovick.com.br"
    secretName: letsencrypt-tls # Nome que está no cluster-issuer.yaml->spec.acme.privateKeySecretRef
